--- a/404.html
+++ b/404.html
@@ -1,3 +1,5 @@
 <script>
-  window.location.href = "/repository-name/" + window.location.pathname;
+  window.location.href =
+    "/clone_navercareers/" +
+    window.location.pathname.replace("/clone_navercareers", "");
 </script>
